--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/wizard-portfolio.svg" />
+    <!-- fallback for older browsers or places that expect png -->
+    <link rel="alternate icon" href="/wizard-portfolio.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>traderwiz</title>
   </head>
